--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
+    "ui-router-ng2": "^1.0.0-beta.5",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
